# copy_air_bridge

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
data/: settings.example.yaml
deploy/systemd/: copy-air-bridge.service.template
scripts/: render-systemd-unit.sh
smartthings-edge/: config.yml  fingerprints.yml  search-parameter.yaml
smartthings-edge/capabilities/: orangecenter41569.airDirection.json  orangecenter41569.displayLight.json  orangecenter41569.humiditySetpoint.json
smartthings-edge/capability-presentations/: orangecenter41569.airDirection.json  orangecenter41569.displayLight.json  orangecenter41569.humiditySetpoint.json
smartthings-edge/profiles/: air-conditioner.yml
smartthings-edge/src/: init.lua  tuya_mappings.lua
smartthings-edge/translations/ko/: orangecenter41569.airDirection.json  orangecenter41569.displayLight.json  orangecenter41569.humiditySetpoint.json
src/copy_air_bridge/: __init__.py  cli.py  config.py  server.py  ssdp.py  state_machine.py  tuya_client.py  tuya_model.py
tests/: test_cli.py  test_server.py  test_ssdp.py  test_state_machine.py
